adds git auto completion to bash_profile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
 <h1>$ cd ~</h1>
 <h1>$ curl -OL https://github.com/git/git/raw/master/contrib/completion/git-completion.bash</h1>
+<pre>
+if [ -f ~/.git-completion.bash ]; then
+  source ~/.git-completion.bash
+fi
+</pre>
+
 </body>
 
 </html>
