adds git auto completion to bash_profile

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-<h1>$ cd ~</h1>
-<h1>$ curl -OL https://github.com/git/git/raw/master/contrib/completion/git-completion.bash</h1>
+<h1>Git Commands</h1>
+<p>
+To add git auto completion do the following steps.
+</p>
+<h4>$ cd ~<br>
+$ curl -OL https://github.com/git/git/raw/master/contrib/completion/git-completion.bash</h4>
 <pre>
 if [ -f ~/.git-completion.bash ]; then
   source ~/.git-completion.bash
