--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ To add git auto completion do the following steps.
 <h4>$ cd ~<br>
 $ curl -OL https://github.com/git/git/raw/master/contrib/completion/git-completion.bash</h4>
 <pre>
+Add the following to your .bash_profile and source it
+
 if [ -f ~/.git-completion.bash ]; then
   source ~/.git-completion.bash
 fi
