adds paragraph tag

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ To add git auto completion do the following steps.
 </p>
 <h4>$ cd ~<br>
 $ curl -OL https://github.com/git/git/raw/master/contrib/completion/git-completion.bash</h4>
+<p>
+Add the following to your .bash_profile and source it.
+</p>
 <pre>
-Add the following to your .bash_profile and source it
-
 if [ -f ~/.git-completion.bash ]; then
   source ~/.git-completion.bash
 fi
