added image and changed some heading tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 <h1>Git Commands</h1>
+<h3>Auto Completion</h3>
 <p>
 To add git auto completion do the following steps.
 </p>
@@ -21,6 +22,9 @@ if [ -f ~/.git-completion.bash ]; then
   source ~/.git-completion.bash
 fi
 </pre>
+<h3>Git Diff</h3>
+<p>git diff belows diffs origin and local</p>
+<img src="images/diff-origin-master.png" alt="diff with origin/master">
 
 </body>
 
