added other diff commands

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ fi
 <p>git diff belows diffs origin and local</p>
 <img src="images/diff-origin-master.png" alt="diff with origin/master">
 
+git diff: Show differences between your working directory and the staging index.
+git diff –staged: Show differences between the index and the most recent commit.
+git diff HEAD: Show the differences between your working directory and the most recent commit.
+
 </body>
 
 </html>
