--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ fi
 <p>git diff belows diffs origin and local</p>
 <img src="images/diff-origin-master.png" alt="diff with origin/master">
 
-<p>git diff: Show differences between your working directory and the staging index.
-git diff –staged: Show differences between the index and the most recent commit.
-git diff HEAD: Show the differences between your working directory and the most recent commit.</p>
+<p>git diff: Show differences between your working directory and the staging index.</p>
+<p>git diff –staged: Show differences between the index and the most recent commit.</p>
+<p>git diff HEAD: Show the differences between your working directory and the most recent commit.</p>
 
 </body>
 
