--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ fi
 <p>git diff –staged: Show differences between the index and the most recent commit.</p>
 <p>git diff HEAD: Show the differences between your working directory and the most recent commit.</p>
 
+<h3>Git HEAD</h3>
+
+<p>cat .git/HEAD</p>
+<p>cat .git/refs/heads/master</p>
+<img src="images/logline-head.png" alt="HEAD">
+
 </body>
 
 </html>
