adds merge commands

--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@ a2e83d8 added p tag</pre>
 </h4>
 <img src="images/git-log-2.png" alt="git log">
   
-
+<h4>
+  <pre>git log --pretty=format:"%h %ad | %s%d [%an]" --graph --date=short</pre>
+  <pre>git log --graph --oneline --decorate --date=relative --all</pre>
+</h4>
+  
+  
+<h3>Git Merge</h3>
+<p>Whenever you merge checkout the branch you want the changes to be merged into</p>
+<p><img src="images/merge.png" alt="merge"></p>
+<p><img src="images/merge-conflict.png" alt="merge conflict"></p>
+<p><img src="images/merge-graph.png" alt="merge graph"></p>
+<p><img src="images/colorful-merge-graph.png" alt="colorful merge graph"></p>
 
 
 </body>
