--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@ a2e83d8 added p tag</pre>
   
 <h3>Git Merge</h3>
 <p>Whenever you merge checkout the branch you want the changes to be merged into</p>
+<p><img src="images/merge-no-conflict.png" alt="merge no conflict"></p>
 <p><img src="images/merge.png" alt="merge"></p>
 <p><img src="images/merge-conflict.png" alt="merge conflict"></p>
 <p><img src="images/merge-graph.png" alt="merge graph"></p>
 <p><img src="images/colorful-merge-graph.png" alt="colorful merge graph"></p>
+<p><img src="images/merge-graph-2.png" alt="colorful merge graph 2"></p>
 
 
 </body>
