--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ a2e83d8 added p tag</pre>
 <p><img src="images/merge.png" alt="merge"></p>
 <p><img src="images/merge-conflict.png" alt="merge conflict"></p>
 <p><img src="images/merge-graph.png" alt="merge graph"></p>
+<p><img src="images/merge_graph_good.png" alt="merge graph"></p>
 <p><img src="images/colorful-merge-graph.png" alt="colorful merge graph"></p>
 <p><img src="images/merge-graph-2.png" alt="colorful merge graph 2"></p>
   
@@ -76,6 +77,16 @@ a2e83d8 added p tag</pre>
   <pre>$ git show --pretty="format:" b8386ca443..cd04d9e530</pre>
 </h4>
 <img src="images/git-show.png" alt="HEAD">
+ 
+<h3>Git Amend</h3>
+<img src="images/git-amend.png" alt="HEAD">
+  
+<h3>Git Show</h3>
+  
+<h3>Git Show</h3>
+  
+<h3>Git Show</h3>
+
 
 </body>
 
