adds git revert command usage

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@ a2e83d8 added p tag</pre>
 <h3>Git Amend</h3>
 <img src="images/git-amend.png" alt="HEAD">
   
+<h3>Git Revert</h3>
+  <h4>
+  <pre>$ git revert HEAD</pre>
+  <pre>$ git revert cd04d9e530</pre>
+  <pre>$ git revert HEAD --no-edit</pre>
+</h4>
+<img src="images/git-revert.png" alt="HEAD">
+  
 <h3>Git Show</h3>
   
 <h3>Git Show</h3>
