--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ fi
 <h3>Git Diff</h3>
 <p>git diff belows diffs origin and local</p>
 <img src="images/diff-origin-master.png" alt="diff with origin/master">
+  
+<p>If we want to diff the changes to a file in a branch to the file in master branch:</p>
+<p>04:16 PM /Users/madhuridevidi/html5/foundations/git-commands gh-pages</p>
+<h3>$ git diff master -- index.html</h3>
 
 <p>git diff: Show differences between your working directory and the staging index.</p>
 <p>git diff –staged: Show differences between the index and the most recent commit.</p>
