some misc changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ fi
   
 <p>If we want to diff the changes to a file in a branch to the file in master branch:</p>
 <p>04:16 PM /Users/madhuridevidi/html5/foundations/git-commands gh-pages</p>
-<h3>$ git diff master -- index.html</h3>
+<h4>$ git diff master -- index.html</h4>
 
 <p>git diff: Show differences between your working directory and the staging index.</p>
 <p>git diff –staged: Show differences between the index and the most recent commit.</p>
@@ -101,13 +101,15 @@ $ git commit --amend</pre>
   
 <p>Since we were undoing the very last commit we made, we were able to use HEAD as the argument to revert. We can revert any arbitrary commit earlier in history by simply specifying its hash value.</p>
   
-<h3>Git Show</h3>
+<h3>Git Reset</h3>
   
-<h3>Git Show</h3>
+<h3>Git Rebase</h3>
   
-<h3>Git Show</h3>
+<h3>Git Cherry-Pick</h3>
 
-
+<h3>Git Stash</h3>
+  
+<h3>Git Patch</h3>
 
 </body>
 
