--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ $ git commit --amend</pre>
 --mixed(default) - repo and staging index only
 --hard - changes the repo, cages the staging index and working copy</pre>
   
+<img src="images/git-reset-soft.png" alt="git revert">
+<img src="images/git-reset-hard" alt="git revert">
+  
 <h3>Git Rebase</h3>
   
 <h3>Git Cherry-Pick</h3>
