addred reset hard image

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ $ git commit --amend</pre>
 --hard - changes the repo, cages the staging index and working copy</pre>
   
 <img src="images/git-reset-soft.png" alt="git revert">
-<img src="images/git-reset-hard" alt="git revert">
+<img src="images/git-reset-hard.png" alt="git revert">
   
 <h3>Git Rebase</h3>
   
