--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ $ git commit --amend</pre>
 --mixed(default) - repo and staging index only
 --hard - changes the repo, cages the staging index and working copy</pre>
   
-<img src="images/git-reset-soft.png" alt="git revert">
-<img src="images/git-reset-hard.png" alt="git revert">
+<p><img src="images/git-reset-soft.png" alt="git revert"></p>
+<p><img src="images/git-reset-hard.png" alt="git revert"></p>
   
 <h3>Git Rebase</h3>
   
