adds cherry pick commands

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@ $ git commit --amend</pre>
 <h3>Git Rebase</h3>
   
 <h3>Git Cherry-Pick</h3>
-
+<p>Git cherry-pick behaves just like merge. If git can’t apply the changes (e.g. you get merge conflicts), git leaves you to resolve the conflicts manually and make the commit yourself.</p>
+<p><img src="images/git-cherry-pick1.png" alt="git cherry pick 1"></p>
+<p><img src="images/git-cherry-pick2.png" alt="git cherry pick 2"></p>
+ 
 <h3>Git Stash</h3>
   
 <h3>Git Patch</h3>
