--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 <h1>Git Commands</h1>
+<h4><pre>$ git config user.name "Madhuri Reddy"
+$ git config --global user.email madhurireddy12@yahoo.com</pre></h4>
 <h3>Auto Completion</h3>
 <p>
 To add git auto completion do the following steps.
