added div html for the three-tier image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ $ git config user.email madhurireddy12@yahoo.com</pre></h4>
 <p>
 As you edit files, Git sees them as modified, because you’ve changed them since your last commit. You stage these modified files and then commit all your staged changes, and the cycle repeats.
 </p>
-<img src="images/three-tier-architecture.png" alt="three tier architecture">
+<div><img src="images/three-tier-architecture.png" alt="three tier architecture"></div>
   
 <h3>Auto Completion</h3>
 <p>
