--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 
 <body>
 <h1>Git Commands</h1>
-<h3>Git project level configs</h3>
+
+
+<nav>
+  <li><a href="#project-level-configs">Project level configs</a></li>
+  <li><a href="#git-merge">Git Merge</a></li>
+  <li><a href="#git-show">Git Show</a></li>
+  <li><a href="#merge-diff-tool">Merge/Diff tool</a></li>
+</nav>
+  
+<div id="project-level-configs"><h3>Project level configs</h3></div>
 <p>Local config will be in your repository's .git/config file.</p>
 <p><img src="images/git-project-configs.png" alt="Git configs - project level"></p>
 
-<h4><pre>$ git config user.name "Madhuri Reddy"
-$ git config user.email madhuri@gmail.com</pre></h4>
+<h4><pre>$ git config user.name "somename"
+$ git config user.email someone@somemail.com</pre></h4>
   
 <h3>Record changes to repository</h3>
 <p>
@@ -47,7 +56,7 @@ fi
 <p>git diff –staged: Show differences between the index and the most recent commit.</p>
 <p>git diff HEAD: Show the differences between your working directory and the most recent commit.</p>
   
-<h3>Useful Git aliases</h3>
+<h3>Some Git aliases</h3>
 
 <h4><pre>$ git config --global alias.logline "log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit"</pre>
   
@@ -77,7 +86,7 @@ a2e83d8 added p tag</pre>
 </h4>
   
   
-<h3>Git Merge</h3>
+<div id="git-merge"><h3>Git Merge</h3></div>
 <p>Whenever you merge checkout the branch you want the changes to be merged into</p>
 <p><img src="images/merge-no-conflict.png" alt="merge no conflict"></p>
 <p><img src="images/merge.png" alt="merge"></p>
@@ -87,7 +96,7 @@ a2e83d8 added p tag</pre>
 <p><img src="images/colorful-merge-graph.png" alt="colorful merge graph"></p>
 <p><img src="images/merge-graph-2.png" alt="colorful merge graph 2"></p>
   
-<h3>Git Show</h3>
+<div id="git-show"><h3>Git Show</h3></div>
 <p>Shows changes</p> 
 <h4>
   <pre>$ git show --pretty="format:" --name-only bd61ad98</pre>
@@ -174,7 +183,7 @@ would be:
   
   
   
-<h3>Merge tool/Diff tool</h3>
+<div id="merge-diff-tool"><h3>Merge/Diff tool</h3></div>
 
   
 <p><img src="images/difftool-mergetool.png" alt="difftool mergetool"></p>
