added meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="description" content="Git Commands">
+<meta name="keywords" content="git, rebase, patch">
+<meta name="author" content="Madhuri Devidi">
 <title>Git Commands</title>
 <link rel="stylesheet" type="text/css" href="styles/git-stylesheet.css">
 </head>
@@ -33,8 +36,8 @@
 <p>Local config will be in your repository's .git/config file.</p>
 <p><img src="images/git-project-configs.png" alt="Git configs - project level"></p>
 
-<h4><pre>$ git config user.name "somename"
-$ git config user.email someone@somemail.com</pre></h4>
+<h4><pre>$ git config user.name "somebody"
+$ git config user.email somebody@somebody.com</pre></h4>
   
 <div id="record-changes"><h3>Record changes to repository</h3></div>
 <p>
