changed anchor tag text

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-<h1>Git Commands</h1>
+<h1>Git Practice and Commands</h1>
 
 
 <nav>
-  <li><a href="#github">Github account</a></li>
+  <li><a href="#github">Github Repo</a></li>
   <li><a href="#project-level-configs">Project level configs</a></li>
-  <li><a href="#create-repo">Project level configs</a></li>
+  <li><a href="#create-repo">Create a new repository</a></li>
   <li><a href="#record-changes">Record changes to repository</a></li>
   <li><a href="#auto-completion">Auto Completion</a></li>
   <li><a href="#git-diff">Git Diff</a></li>
