--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div id="github"><h3>Github Repo</h3></div>
 <pre>Go to github.com and create an account. It is free.
 Create a repo called git-commands. 
-Then from your computer you can <a href="http://git-scm.com/downloads">download and install git</a>. 
+Then from your computer, <a href="http://git-scm.com/downloads">download and install git</a>. 
 Create a directory with the name you used for repo name.
 Set configs as shown below. These will be specific to a single repository.</pre>
   
