added stash commands

--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@ would be:
 <p><img src="images/git-cherry-pick2.png" alt="git cherry pick 2"></p>
  
 <div id="git-stash"><h3>Git Stash</h3></div>
+<h4>
+  <pre>$ git stash save "comment"</pre>
+  <pre>$ git stash list</pre>
+  <pre>$ git stash pop</pre>
+  <pre>$ git stash apply stash@{1}</pre>
+  <pre>$ git stash drop stash@{1}</pre>
+</h4>
+<p><img src="images/git-stash.png" alt="git stash"></p>
+
   
 <div id="git-patch"><h3>Git Patch</h3></div>
 <p>To create a patch from the last two commits in one branch(master) and correctly apply this patch to another(gh-pages) repository, do the following:</p>
