--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@ fi
   
 <p>If we want to diff the changes to a file in a branch to the file in master branch:</p>
 <p>04:16 PM /Users/madhuridevidi/html5/foundations/git-commands gh-pages</p>
-<h4>$ git diff master -- index.html</h4>
 
-<h4><pre>$ git diff
+<h4><pre>$ git diff master -- index.html
+Shows the diff between index.html file in current branch vs master
+
+$ git diff
 Show differences between your working directory and the staging index.
 
 $ git diff –staged
